# LeggedRobot

./: README.md
Embedded/imu/: ADIS16364.c  ADIS16364.h  ADIS16364_exampleMain.c  ADIS16375.c  ADIS16375.h  ForceSensor.c  ForceSensor.h  imu.c  imu.dep  imu.ewd  imu.ewp  imu.ewt  imu.eww  imu.icf  imu_ccs.cmd  lwipopts.h  main.c  main.h  spi.c  spi.h  startup_ccs.c  startup_ewarm.c
Embedded/imu/ewarm/Exe/: imu.out  imu.sim
Embedded/imu/ewarm/List/: imu.map
Embedded/imu/settings/: imu.IMU.cspy.bat  imu.dbgdt  imu.dni  imu.wsdt
ROS/: dump.txt
ROS/IMUprocessTest/: Disc_Dynamics.m  GAMMA.m  armadillo_test.cpp  definitions.txt  gyro_x.mat  mastrosim_2legs.mat  mastrosim_5.mat  measur.m  quaternion2Matrix.m  quaternion_mult.m  rot_vector2quaternion.m  skew.m  state_2legs_EEKF.m  webots_estima_2legs.m
ROS/Legged/catkin_ws/devel/: .rosinstall  setup.sh
ROS/Legged/catkin_ws/devel/include/motor_control/: BL_Encoder.h  BL_PWM.h  BR_Encoder.h  BR_PWM.h  Encoder.h  FL_Encoder.h  FL_PWM.h  FR_Encoder.h  FR_PWM.h  PWM.h  Position.h
ROS/Legged/catkin_ws/devel/lib/motor_control/: BL_motor_controller  BL_motor_pid  BR_motor_controller  BR_motor_pid  FL_Read_Position  FL_motor_controller  FL_motor_pid  FR_motor_controller  FR_motor_pid  motor_controller  motor_pid
ROS/Legged/catkin_ws/devel/lib/pkgconfig/: motor_control.pc
ROS/Legged/catkin_ws/devel/lib/python2.7/dist-packages/motor_control/msg/: _BL_Encoder.py  _BL_PWM.py  _BR_Encoder.py  _BR_PWM.py  _Encoder.py  _FL_Encoder.py  _FL_PWM.py  _FR_Encoder.py  _FR_PWM.py  _PWM.py  _Position.py  __init__.py
ROS/Legged/catkin_ws/devel/share/common-lisp/ros/motor_control/msg/: BL_Encoder.lisp  BL_PWM.lisp  BR_Encoder.lisp  BR_PWM.lisp  Encoder.lisp  FL_Encoder.lisp  FL_PWM.lisp  FR_Encoder.lisp  FR_PWM.lisp  PWM.lisp  Position.lisp  _package.lisp  _package_BL_Encoder.lisp  _package_BL_PWM.lisp  _package_Position.lisp  motor_control-msg.asd
ROS/Legged/catkin_ws/devel/share/motor_control/cmake/: motor_control-msg-paths.cmake  motor_controlConfig.cmake
ROS/Legged/catkin_ws/src/motor_control/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ROS/Legged/catkin_ws/src/motor_control/msg/: BR_PWM.msg
ROS/Legged/catkin_ws/src/motor_control/src/: BL_motor_controller.cpp  BL_motor_pid.cpp  BR_motor_controller.cpp  BR_motor_pid.cpp  FL_Read_Position.cpp  FL_motor_controller.cpp  FL_motor_pid.cpp  FR_motor_controller.cpp  FR_motor_pid.cpp  motor_controller.cpp  motor_pid.cpp
ROS/newWorkspace/catkin_ws/devel/: .catkin
ROS/newWorkspace/catkin_ws/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
ROS/newWorkspace/catkin_ws/devel/include/legged_robot/: Encoder.h  PWM.h  Position.h
ROS/newWorkspace/catkin_ws/devel/lib/legged_robot/: BL_motor_interface  BL_motor_pid  BR_motor_interface  BR_motor_pid  FL_Read_Position  FL_motor_interface  FL_motor_pid  FR_motor_interface  FR_motor_pid
ROS/newWorkspace/catkin_ws/devel/lib/pkgconfig/: legged_robot.pc
ROS/newWorkspace/catkin_ws/devel/lib/python2.7/dist-packages/legged_robot/msg/: _Encoder.py  _PWM.py  _Position.py  __init__.py
ROS/newWorkspace/catkin_ws/devel/share/common-lisp/ros/legged_robot/msg/: Encoder.lisp  PWM.lisp  Position.lisp  _package.lisp  _package_Encoder.lisp  _package_PWM.lisp  _package_Position.lisp  legged_robot-msg.asd
ROS/newWorkspace/catkin_ws/devel/share/legged_robot/cmake/: legged_robot-msg-extras.cmake  legged_robot-msg-paths.cmake  legged_robotConfig.cmake
ROS/newWorkspace/catkin_ws/src/legged_robot/: CMakeLists.txt  package.xml
ROS/newWorkspace/catkin_ws/src/legged_robot/msg/: AccGyro.msg  Encoder.msg  Force.msg  LegCommand.msg  LegEncoders.msg  LegPosition.msg  Position.msg  RobotAngles.msg  RobotForces.msg  RobotInertiaMeasurements.msg
ROS/newWorkspace/catkin_ws/src/legged_robot/src/: BL_leg_control.cpp  BL_leg_interface.cpp  BL_motor_interface.cpp  BL_motor_pid.cpp  BR_leg_control.cpp  BR_leg_interface.cpp  BR_motor_interface.cpp  BR_motor_pid.cpp  FL_Read_Position.cpp  FL_leg_control.cpp  FL_leg_interface.cpp  FL_motor_interface.cpp  FL_motor_pid.cpp  FR_Read_Position.cpp  FR_leg_control.cpp  FR_leg_interface.cpp  FR_motor_interface.cpp  FR_motor_pid.cpp  Force_interface.cpp  IMU_interface.cpp  Read_Position.cpp  RobotSensorPreprocess.cpp
