<?xml version="1.0"?>
<package>
  <name>legged_robot</name>
  <version>1.0.0</version>
  <description>The legged_robot package</description>

  <maintainer email="pavlos.stavrou@gmail.com">Pavlos Stavrou</maintainer>
  <license>BSD</license>
  <url type="website">http://csl-ep.mech.ntua.gr/</url>
  <author email="pavlos.stavrou@gmail.com">Pavlos Stavrou</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>